src/components/Navbar/Navbar.module.css
.nav__links_container {
    height: 70px;
    transition: var(--transition);
}

.nav__active {
    color: var(--color-blue);
}

.burger_bar {
    background-color: var(--color-blue);
    border-radius: var(--default-radius);
    height: 3px;
    margin: 4px;
    width: 25px;
}

@media (max-width: 768px) {
    .nav__container img {
        height: 40px;
    }
}

